tests/good/syntax/071-if-5.clap
val x = 
  if True then (if False then U) else U

