tests/bad/lexical/069-if-3.clap
val x = 
  if True then U else if False then U else 
 
